--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     ports:
       - "3000:3000"  # Mapea el puerto 3000 del contenedor al host
     environment:
-      - DB_HOST=db
-      - DB_USER=root
-      - DB_PASSWORD=my-secret-pw
-      - DB_NAME=academia_ingles
-      - JWT_SECRET=supersecretkey
+      - DB_HOST=${DB_HOST}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - db
 
@@ -19,8 +19,8 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_ROOT_PASSWORD: my-secret-pw
-      MYSQL_DATABASE: academia_ingles
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
     ports:
       - "3308:3306" # Mapea el puerto 3306 del contenedor al 3308 host
     volumes:
