--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "academia-api",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "echo hello"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "16.4.5",
-    "express": "4.21.2",
-    "jsonwebtoken": "9.0.2",
-    "mysql2": "3.11.3",
-    "winston": "^3.17.0"
-  }
+	"name": "academia-api",
+	"version": "1.0.0",
+	"type": "module",
+	"main": "app.js",
+	"scripts": {
+		"start": "node src/app.js",
+		"dev": "nodemon src/app.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"vercel-build": "echo hello"
+	},
+	"engines": {
+		"node": ">=20"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"bcrypt": "5.1.1",
+		"cors": "^2.8.5",
+		"dotenv": "16.4.5",
+		"express": "4.21.2",
+		"jsonwebtoken": "9.0.2",
+		"mysql2": "3.11.3",
+		"winston": "^3.17.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.0"
+	}
 }
