--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"type": "module",
 	"main": "app.js",
 	"scripts": {
-		"start": "node src/app.js",
+		"start": "node src/server.js",
 		"dev": "nodemon src/app.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --runInBand",
 		"vercel-build": "echo hello"
 	},
 	"engines": {
@@ -19,13 +19,18 @@
 	"dependencies": {
 		"bcrypt": "5.1.1",
 		"cors": "^2.8.5",
-		"dotenv": "16.4.5",
 		"express": "4.21.2",
 		"jsonwebtoken": "9.0.2",
 		"mysql2": "3.11.3",
 		"winston": "^3.17.0"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.0"
+		"@babel/core": "^7.26.0",
+		"@babel/preset-env": "^7.26.0",
+		"babel-jest": "^29.7.0",
+		"dotenv": "^16.4.7",
+		"jest": "^29.7.0",
+		"nodemon": "^3.0.0",
+		"supertest": "^7.0.0"
 	}
 }
