--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node src/server.js",
-		"dev": "nodemon src/app.js",
+		"dev": "nodemon src/server.js",
 		"test": "jest",
 		"vercel-build": "echo hello"
 	},
