--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cors": "^2.8.5",
 		"express": "4.21.2",
 		"jsonwebtoken": "9.0.2",
+		"mercadopago": "^2.3.0",
 		"mysql2": "3.11.3",
 		"winston": "^3.17.0"
 	},
