--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"description": "",
+	"description": "Bienvenido a la plataforma de gestión para la Academia de Inglés. Este proyecto permite gestionar usuarios, autenticación y otros módulos específicos de la administración de una academia de idiomas.",
 	"dependencies": {
 		"bcrypt": "5.1.1",
 		"cors": "^2.8.5",
@@ -33,5 +33,16 @@
 		"jest": "^29.7.0",
 		"nodemon": "^3.0.0",
 		"supertest": "^7.0.0"
-	}
+	},
+	"directories": {
+		"test": "test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/darriola1/academia-api.git"
+	},
+	"bugs": {
+		"url": "https://github.com/darriola1/academia-api/issues"
+	},
+	"homepage": "https://github.com/darriola1/academia-api#readme"
 }
