--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"main": "app.js",
 	"scripts": {
-		"start": "node src/server.js",
+		"start": "node --experimental-json-modules src/server.js",
 		"dev": "nodemon src/server.js",
 		"test": "jest",
 		"vercel-build": "echo hello"
@@ -23,6 +23,7 @@
 		"jsonwebtoken": "9.0.2",
 		"mercadopago": "^2.3.0",
 		"mysql2": "3.11.3",
+		"swagger-ui-express": "^5.0.1",
 		"winston": "^3.17.0"
 	},
 	"devDependencies": {
@@ -32,7 +33,8 @@
 		"dotenv": "^16.4.7",
 		"jest": "^29.7.0",
 		"nodemon": "^3.0.0",
-		"supertest": "^7.0.0"
+		"supertest": "^7.0.0",
+		"swagger-autogen": "^2.23.7"
 	},
 	"directories": {
 		"test": "test"
